I AM WORKING IN THE MEDIA QUERIST

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
         <meta charset="UTF-8">
         <meta name="description" content="Esta es la pagina oficial de la NASA">
         <meta name="robots" content="index, follow">
-        <meta name="viewport" content="width=device=width, initial-sacle=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>NASA</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/tablet.css" media="(max-width: 940px)">
+        <link rel="stylesheet" href="css/movile.css" media="(max-width: 650px)">
     </head>
     <body class="body__home">
         <header>
-            <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
+            <picture>
+                <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
+            </picture>
             <nav class="header__nav">
                 <div class="header__nav-border"></div>
                 <ul class="header__nav-items">
