--- a/destination-moon.html
+++ b/destination-moon.html
@@ -4,9 +4,11 @@
             <meta charset="UTF-8">
             <meta name="description" content="Esta es la pagina oficial de la NASA">
             <meta name="robots" content="index, follow">
-            <meta name="viewport" content="width=device=width, initial-sacle=1.0">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>Moon</title>
             <link rel="stylesheet" href="css/style.css">
+            <link rel="stylesheet" href="css/tablet.css" media="(max-width: 940px)">
+            <link rel="stylesheet" href="css/movile.css" media="(max-width: 650px)">
         </head>
         <body class="body__destination">
             <header>
