--- a/technology-capsule.html
+++ b/technology-capsule.html
@@ -7,6 +7,8 @@
             <meta name="viewport" content="width=device=width, initial-sacle=1.0">
             <title>CAPSULE</title>
             <link rel="stylesheet" href="css/style.css">
+            <link rel="stylesheet" href="css/tablet.css" media="(max-width: 940px)">
+            <link rel="stylesheet" href="css/movile.css" media="(max-width: 650px)">
         </head>
         <body class="body__technology">
             <header>
