--- a/destination-europa.html
+++ b/destination-europa.html
@@ -12,11 +12,13 @@
         </head>
         <body class="body__destination">
             <header>
-                <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
+                <picture>
+                    <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
+                </picture>
                 <nav class="header__nav">
                     <div class="header__nav-border"></div>
                     <ul class="header__nav-items">
-                        <li><a href="/index.html"><b>00</b>  HOME</a> </li>
+                        <li><a href="index.html"><b>00</b>  HOME</a> </li>
                         <li><a href="/destination-moon.html"><b>01</b>  DESTINATION</a> </li>
                         <li><a href="/crew-engineer.html"> <b>02</b>  CREW</a></li>
                         <li><a href="/technology-vehicle.html"><b>03</b>  TECHNOLOGY</a> </li>
