--- a/destination-mars.html
+++ b/destination-mars.html
@@ -11,18 +11,20 @@
             <link rel="stylesheet" href="css/movile.css" media="(max-width: 650px)">
         </head>
                <body class="body__destination">
-            <header>
-                <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
-                <nav class="header__nav">
-                    <div class="header__nav-border"></div>
-                    <ul class="header__nav-items">
-                        <li><a href="/index.html"><b>00</b>  HOME</a> </li>
-                        <li><a href="/destination-moon.html"><b>01</b>  DESTINATION</a> </li>
-                        <li><a href="/crew-engineer.html"> <b>02</b>  CREW</a></li>
-                        <li><a href="/technology-vehicle.html"><b>03</b>  TECHNOLOGY</a> </li>
-                    </ul>
-                </nav>
-            </header>
+                <header>
+                    <picture>
+                        <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
+                    </picture>
+                    <nav class="header__nav">
+                        <div class="header__nav-border"></div>
+                        <ul class="header__nav-items">
+                            <li><a href="index.html"><b>00</b>  HOME</a> </li>
+                            <li><a href="/destination-moon.html"><b>01</b>  DESTINATION</a> </li>
+                            <li><a href="/crew-engineer.html"> <b>02</b>  CREW</a></li>
+                            <li><a href="/technology-vehicle.html"><b>03</b>  TECHNOLOGY</a> </li>
+                        </ul>
+                    </nav>
+                </header>
             <main class="main__destination">
                 <section class="destination__left">
                     <P class="destination__left-title"> <b>01</b>  PICK YOUR DESTINATION</P>
