I finished the style for crew page (Tablet)

--- a/crew-engineer.html
+++ b/crew-engineer.html
@@ -4,7 +4,7 @@
             <meta charset="UTF-8">
             <meta name="description" content="Esta es la pagina oficial de la NASA">
             <meta name="robots" content="index, follow">
-            <meta name="viewport" content="width=device=width, initial-sacle=1.0">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>ENGINEER</title>
             <link rel="stylesheet" href="css/style.css">
             <link rel="stylesheet" href="css/tablet.css" media="(max-width: 940px)">
@@ -12,11 +12,13 @@
         </head>
         <body class="body__crew">
             <header>
-                <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
+                <picture>
+                    <img src="/asset/shared/logo.svg" alt="Logo de la compañia espacial">
+                </picture>
                 <nav class="header__nav">
                     <div class="header__nav-border"></div>
                     <ul class="header__nav-items">
-                        <li><a href="/index.html"><b>00</b>  HOME</a> </li>
+                        <li><a href="index.html"><b>00</b>  HOME</a> </li>
                         <li><a href="/destination-moon.html"><b>01</b>  DESTINATION</a> </li>
                         <li><a href="/crew-engineer.html"> <b>02</b>  CREW</a></li>
                         <li><a href="/technology-vehicle.html"><b>03</b>  TECHNOLOGY</a> </li>
