--- a/specialist.html
+++ b/specialist.html
@@ -5,7 +5,7 @@
             <meta name="description" content="Esta es la pagina oficial de la NASA">
             <meta name="robots" content="index, follow">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>ENGINEER</title>
+            <title>SPECIALIST</title>
             <link rel="stylesheet" href="css/style.css">
             <link rel="stylesheet" href="css/tablet.css" media="(max-width: 940px)">
             <link rel="stylesheet" href="css/movile.css" media="(max-width: 650px)">
@@ -43,7 +43,7 @@
                     </div>
                    
                 </section>
-                <section class="main__crew-right">
+                <section class="main__crew-right main_crew-specialist">
                     <img src="/asset/crew/image-mark-shuttleworth.png" alt="Imagen de un comandante de la NASA">
                 </section>
             </main>    
