I finished the style for technology page (Tablet)

--- a/technology-capsule.html
+++ b/technology-capsule.html
@@ -4,7 +4,7 @@
             <meta charset="UTF-8">
             <meta name="description" content="Esta es la pagina oficial de la NASA">
             <meta name="robots" content="index, follow">
-            <meta name="viewport" content="width=device=width, initial-sacle=1.0">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>CAPSULE</title>
             <link rel="stylesheet" href="css/style.css">
             <link rel="stylesheet" href="css/tablet.css" media="(max-width: 940px)">
@@ -25,7 +25,7 @@
             </header>
             <main class="main__technology">
                 <div class="container">
-                    <p class="container__title">SPACE LAUNCH 101</p>
+                    <p class="container__title"> <b>03</b> SPACE LAUNCH 101</p>
                     <div class="container__info">
                         <ul class="container__info-left">
                             <li> <a href="/technology-vehicle.html">1</a> </li>
