--- a/technology-spaceport.html
+++ b/technology-spaceport.html
@@ -4,7 +4,7 @@
             <meta charset="UTF-8">
             <meta name="description" content="Esta es la pagina oficial de la NASA">
             <meta name="robots" content="index, follow">
-            <meta name="viewport" content="width=device=width, initial-sacle=1.0">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <title>SPACEPORT</title>
             <link rel="stylesheet" href="css/style.css">
             <link rel="stylesheet" href="css/tablet.css" media="(max-width: 940px)">
