I have added links of the image

--- a/crew-commander.html
+++ b/crew-commander.html
@@ -44,7 +44,7 @@
                 </section>
                 <section class="main__crew-right">
                     
-                  <img src="/asset/crew/image-douglas-hurley.png" alt="Imagen de un comandante de la NASA">  
+                  <img src="https://i.postimg.cc/zfdCHp2H/image-douglas-hurley.webp" alt="Imagen de un comandante de la NASA">  
                 </section>
 
             </main>
