--- a/crew-engineer.html
+++ b/crew-engineer.html
@@ -44,7 +44,7 @@
                    
                 </section>
                 <section class="main__crew-right">
-                    <img src="/asset/crew/image-anousheh-ansari.png" alt="Imagen de un comandante de la NASA">
+                    <img src="https://i.postimg.cc/c1vmwySx/image-anousheh-ansari.webp" alt="Imagen de un comandante de la NASA">
                 </section>
 
             </main>
