--- a/crew-pilot.html
+++ b/crew-pilot.html
@@ -44,7 +44,7 @@
                    
                 </section>
                 <section class="main__crew-right">
-                     <img src="/asset/crew/image-victor-glover.png" alt="Imagen de un comandante de la NASA"> 
+                     <img src="https://i.postimg.cc/W15F5zGQ/image-victor-glover.webp" alt="Imagen de un comandante de la NASA"> 
                 </section>
         </body>
     
