--- a/specialist.html
+++ b/specialist.html
@@ -44,7 +44,7 @@
                    
                 </section>
                 <section class="main__crew-right main_crew-specialist">
-                    <img src="/asset/crew/image-mark-shuttleworth.png" alt="Imagen de un comandante de la NASA">
+                    <img src="https://i.postimg.cc/7YgSnqQk/image-mark-shuttleworth.webp" alt="Imagen de un comandante de la NASA">
                 </section>
             </main>    
         </body>
