--- a/technology-capsule.html
+++ b/technology-capsule.html
@@ -40,7 +40,7 @@
                             <p>A space capsule is an often-crewed spacecraft that uses <br> a blunt-body reentry capsule to reenter the Earth's <br> atmosphere without wings. Our capsule is where you'll <br> spend your time during the flight. It includes a space gym <br> , cinema, and plenty of other activities to keep you <br> entertained.</p>
                         </section>
                     </div>
-                    <img src="/asset/technology/image-space-capsule-portrait.jpg" alt="Capsule" class="container__img">
+                    <img src="https://i.postimg.cc/gjwbbMQV/image-space-capsule-portrait.jpg" alt="Capsule" class="container__img">
                 </div>
             </main>
         </body>
