--- a/destination-moon.html
+++ b/destination-moon.html
@@ -29,7 +29,7 @@
             <main class="main__destination">
                 <section class="destination__left">
                     <P class="destination__left-title"> <b>01</b>  PICK YOUR DESTINATION</P>
-                    <img src="/asset/destination/image-moon.png" alt="Imagen del planeta moon">
+                    <img src="https://i.postimg.cc/2S9dV2Kb/image-moon.png" alt="Imagen del planeta moon">
                 </section>
                 <section class="destination__right">
                     <div class="destination__right-container">
