--- a/destination-titan.html
+++ b/destination-titan.html
@@ -28,7 +28,7 @@
             <main class="main__destination">
                 <section class="destination__left">
                     <P class="destination__left-title"> <b>01</b>  PICK YOUR DESTINATION</P>
-                    <img src="/asset/destination/image-titan.png" alt="Imagen del planeta moon">
+                    <img src="https://i.postimg.cc/MpHV21pW/image-titan.png" alt="Imagen del planeta moon">
                 </section>
                 <section class="destination__right">
                     <div class="destination__right-container">
