--- a/technology-spaceport.html
+++ b/technology-spaceport.html
@@ -40,7 +40,7 @@
                             <p>A spaceport or cosmodrome is a site for launching (or <br> receiving) spacecraft, by analogy to the seaport for ships <br> or airport for aircraft. Based in the famous Cape <br> Canaveral, our spaceport is ideally situated to take <br> advantage of the Earth’s rotation for launch.</p>
                         </section>
                     </div>
-                    <img src="/asset/technology/image-spaceport-portrait.jpg" alt="SPACEPORT" class="container__img">
+                    <img src="https://i.postimg.cc/VsSN84jZ/image-spaceport-portrait.jpg" alt="SPACEPORT" class="container__img">
                 </div>
             </main>
         </body>
